# quant-lab

./: .gitignore  ARCHITECTURE.md  README.md
BacktestAgent/: CMakeLists.txt  README.md  query_results.py  run_backtest.py
BacktestAgent/cpp/: main.cpp
BacktestAgent/cpp/include/: backtester.hpp  indicators.hpp  strategy_interface.hpp  types.hpp
BacktestAgent/cpp/src/: backtester.cpp  indicators.cpp
BacktestAgent/cpp/strategies/: ma_crossover.cpp  ma_crossover.h  ma_crossover_params.json  ma_dip_buyer2.cpp  ma_dip_buyer2.h  ma_dip_buyer2_params.json  rsi_reversal_test.cpp  rsi_reversal_test.h  rsi_reversal_test_params.json  volatilityharvesting.cpp  volatilityharvesting.h  volatilityharvesting_params.json
BacktestAgent/python/: requirements.txt
BacktestAgent/python/common/: __init__.py  data_agent_client.py
BacktestAgent/python/db/: results_saver.py  schema.sql
BacktestAgent/python/orchestrator/: __init__.py  backtester_runner.py
BotBuildAgent/: README.md  build_all.sh
CommunicationAgent/: .env.example  README.md  auto_test.py  bot_actions.py  function_generator.py  run_all_telegram_tests.py  telegram_bot.py  test_all_31.py  test_as_user.py  test_bot_actions.py  test_bot_direct.py  test_bot_telegram.py  test_telegram.py
DataAgent/: README.md  requirements.txt  upload_from_master.py
MasterAgent/: action_executor.py  backtest_query.py  check_backtest_76.py  csharp_full_generator.py  db_storage.py  debug_strategy.py  market_monitor.py  optimization_grid_generator.py  smart_query.py  start_monitor.py  strategy_code_generator.py  strategy_definition.py  (+6 more)
(+31 files in other folders)
